2007-12-29  Armin Burgmeier  <armin@openismus.com>

	* configure.in: Require latest libepc on both maemo and non-maemo.

	* glom/application.cc: Fixed an #ifdef at the wrong position so the
	application's menu is fully populated in client-only mode.

2007-12-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_document.dtd: Several corrections and improvements. This is not 
	quite finished yet.

2007-12-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_document.dtd: Updated and corrected DTD with documentation 
	comments. This was completed by novanasa, as a Google Highly-Open Participation 
	(GHOP) task (GNOME GHOP task 49).
	This is for documentation (or utilities) - we do not actually validate the 
	.xml so that we can be as liberal as possible when loading documents.

2007-12-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/glomconversions.cc: get_text_for_gda_value():
	Return escaped text for images, instead of using to_string(). This fixes the 
	loading of images from the document, so they are not lost when closing the 
	document.

2007-12-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas/canvas_image_movable.cc:
	* glom/utility_widgets/canvas/canvas_item_movable.h: scale_to_size():
	Set the size again after setting the pixbuf, to preserve the size.
	* glom/utility_widgets/canvas/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas/canvas_group_resizable.h:
	Added (and emitted) signal_resized().
	* glom/mode_design/print_layouts/canvas_layout_item.cc:
	* glom/mode_design/print_layouts/canvas_layout_item.h:
	Handle signal_resized() to rescale images when they are resized.

2007-12-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas/canvas_image_movable.cc:
	* glom/utility_widgets/canvas/canvas_image_movable.h: Store the 
	original pixbuf and use it in a new scale_to_size() method.
	* glom/mode_design/print_layouts/canvas_layout_item.cc: 